tests/ui/diagnostic-flags/terminal_urls.rs
//@ compile-flags: -Zterminal-urls=yes --error-format=human --color=always
fn main() {
    let () = 4;
}
